# nova-data-cli

./: .gitignore  README.md  pyproject.toml
.github/skills/lerobot-export/: SKILL.md
docs/: export-guide.md
examples/: groot_export.json  johann.json  lerobot_export.json  lerobot_export_resized.json
src/nova_export/: cli.py  logging_setup.py
src/nova_export/export/: __init__.py  config.py  episode_sampler.py  exporter.py  types.py  video_decoder.py
src/nova_export/export/heads/: __init__.py  base.py  groot.py  lerobot.py
tests/: conftest.py  test_export.py  test_groot_head.py  test_trimming.py
tools/groot_lerobot_conversion/: README.md  convert_v3_to_v2.py  groot_convert.py  pyproject.toml
